test: refactor integration tests removing redundant assertions and ensuring Java 17 compatibility