@@ -14,6 +14,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @Tag("integration")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@SuppressWarnings("SequencedCollectionMethodCanBeUsed")
 class HGBrasilClientIT {
 
     private static final Logger LOGGER =  LoggerFactory.getLogger(HGBrasilClientIT.class);
@@ -28,6 +29,7 @@ class HGBrasilClientIT {
     private DividendOperations dividendOperations;
     private SplitOperations splitOperations;
     private IndicatorOperations indicatorOperations;
+    private AssetHistoryOperations assetHistoryOperations;
 
     @BeforeAll
     void setup() {
@@ -48,6 +50,7 @@ class HGBrasilClientIT {
         dividendOperations = client.getDividendOperations();
         splitOperations = client.getSplitOperations();
         indicatorOperations = client.getIndicatorOperations();
+        assetHistoryOperations = client.getAssetHistoryOperations();
     }
 
     @AfterAll
@@ -66,14 +69,11 @@ class HGBrasilClientIT {
                         .apiKey(INVALID_API_KEY)
                         .build()
         ) {
-            String symbol = "PETR4";
-
             HGBrasilApiException exception = assertThrows(
                     HGBrasilApiException.class,
-                    () -> clientWithInvalidKey.getAssetOperations().getBySymbol(symbol),
-                    "Must throw HGBrasilApiException"
+                    () -> clientWithInvalidKey.getAssetOperations().getBySymbol("PETR4")
             );
-            assertNotNull(exception.getMessage(), "Exception message must not be null");
+            assertNotNull(exception.getMessage());
 
             LOGGER.debug("Request with invalid API key:\n{}\n", exception.getMessage(), exception);
         }
@@ -87,10 +87,12 @@ class HGBrasilClientIT {
         void shouldFetchCurrencies() {
             CurrenciesResponse response = exchangeOperations.getCurrencies();
 
-            assertNotNull(response, "Currencies response must not be null");
-            assertEquals("BRL", response.results().currencies().source(), "Currencies response must contain BRL in 'source' field");
-            assertTrue(response.results().currencies().rates().containsKey("EUR"), "Currencies rates must contain key EUR");
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertEquals("BRL", response.results().currencies().source()),
+                    () -> assertTrue(response.results().currencies().rates().containsKey("EUR")),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("Currencies response:\n{}\n", response);
         }
@@ -100,9 +102,11 @@ class HGBrasilClientIT {
         void shouldFetchBitcoin() {
             BitcoinResponse response = exchangeOperations.getBitcoin();
 
-            assertNotNull(response, "Bitcoin response must not be null");
-            assertTrue(response.results().bitcoin().containsKey("blockchain_info"), "Response must be contain key blockchain_info");
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertTrue(response.results().bitcoin().containsKey("blockchain_info")),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("Bitcoin response:\n{}\n", response);
         }
@@ -117,11 +121,12 @@ class HGBrasilClientIT {
             String symbol = "PETR4";
             AssetResponse response = assetOperations.getBySymbol(symbol);
 
-            assertNotNull(response, "Asset response must not be null");
-            assertNotNull(response.results(), "Field 'results' must not be null");
-            assertTrue(response.results().containsKey("PETR4"), "Asset response must contain key 'PETR4'");
-            assertNotNull(response.results().get("PETR4").price(), "Asset price must not be null");
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertTrue(response.results().containsKey("PETR4")),
+                    () -> assertNotNull(response.results().get("PETR4").price()),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("Single symbol - Asset response:\n{}\n", response);
         }
@@ -132,18 +137,16 @@ class HGBrasilClientIT {
             List<String> symbols = List.of("PETR4", "BPAC11", "RBRY11");
             AssetResponse response = assetOperations.getBySymbols(symbols);
 
-            assertNotNull(response, "Asset response must not be null");
-            assertNotNull(response.results(), "Field 'results' must not be null");
-            assertTrue(response.results().containsKey("PETR4"), "Stock response must contain key 'PETR4'");
-            assertNotNull(response.results().get("PETR4").price(), "PETR4 price must not be null");
-
-            assertTrue(response.results().containsKey("BPAC11"), "Asset response must contain key 'BPAC11'");
-            assertNotNull(response.results().get("BPAC11").price(), "BPAC11 price must not be null");
-
-            assertTrue(response.results().containsKey("RBRY11"), "Asset response must contain key 'RBRY11'");
-            assertNotNull(response.results().get("RBRY11").price(), "RBRY11 price must not be null");
-
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertTrue(response.results().containsKey("PETR4")),
+                    () -> assertNotNull(response.results().get("PETR4").price()),
+                    () -> assertTrue(response.results().containsKey("BPAC11")),
+                    () -> assertNotNull(response.results().get("BPAC11").price()),
+                    () -> assertTrue(response.results().containsKey("RBRY11")),
+                    () -> assertNotNull(response.results().get("RBRY11").price()),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("List - Asset response:\n{}\n", response);
         }
@@ -154,21 +157,16 @@ class HGBrasilClientIT {
             String[] symbols = {"KNCA11", "JURO11", "USDBRL"};
             AssetResponse response = assetOperations.getBySymbols(symbols);
 
-            assertNotNull(response, "Asset response must not be null");
-            assertNotNull(response.results(), "Field 'results' must not be null");
-            assertTrue(response.results().containsKey("KNCA11"), "Asset response must contain key 'KNCA11'");
-            assertFalse(response.results().get("KNCA11").error(), "KNCA11 field 'error' should be false");
-            assertNotNull(response.results().get("KNCA11").price(), "KNCA11 price must not be null");
-
-            assertTrue(response.results().containsKey("JURO11"), "Asset response must contain key 'JURO11'");
-            assertFalse(response.results().get("JURO11").error(), "JURO11 field 'error' should be false");
-            assertNotNull(response.results().get("JURO11").price(), "JURO11 price must not be null");
-
-            assertTrue(response.results().containsKey("USDBRL"), "Asset response must contain key 'USDBRL'");
-            assertFalse(response.results().get("USDBRL").error(), "USDBRL field 'error' should be false");
-            assertNotNull(response.results().get("USDBRL").price(), "USDBRL price must not be null");
-
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertFalse(response.results().get("KNCA11").error()),
+                    () -> assertNotNull(response.results().get("KNCA11").price()),
+                    () -> assertFalse(response.results().get("JURO11").error()),
+                    () -> assertNotNull(response.results().get("JURO11").price()),
+                    () -> assertFalse(response.results().get("USDBRL").error()),
+                    () -> assertNotNull(response.results().get("USDBRL").price()),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("Array - Asset response:\n{}", response);
         }
@@ -178,12 +176,12 @@ class HGBrasilClientIT {
         void shouldReturnErrorFields_whenSymbolIsInvalid() {
             AssetResponse response = assetOperations.getBySymbol("UNEXISTENTSYMBOL11");
 
-            assertNotNull(response, "Asset response must not be null");
-            assertNotNull(response.results(), "Field 'results' must not be null");
-            assertTrue(response.results().containsKey("UNEXISTENTSYMBOL11"), "Stock response must contain key 'UNEXISTENTSYMBOL11'");
-            assertTrue(response.results().get("UNEXISTENTSYMBOL11").error(), "UNEXISTENTSYMBOL11 field 'error' should be true");
-            assertNotNull(response.results().get("UNEXISTENTSYMBOL11").message(), "UNEXISTENTSYMBOL11 field 'message' must not be null");
-            assertTrue(response.validKey(), "API Key must be valid");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertTrue(response.results().get("UNEXISTENTSYMBOL11").error()),
+                    () -> assertNotNull(response.results().get("UNEXISTENTSYMBOL11").message()),
+                    () -> assertTrue(response.validKey())
+            );
 
             LOGGER.debug("Invalid symbol - Asset response:\n{}\n", response);
         }
@@ -194,21 +192,14 @@ class HGBrasilClientIT {
             String[] symbols = {"ETHUSD", "BVSP", "EURBRL", "BDIV11", "TSMC34"};
             AssetResponse response = assetOperations.getBySymbols(symbols);
 
-            assertNotNull(response, "Asset response must not be null");
-            assertTrue(response.results().containsKey("ETHUSD"), "Asset response must contain key 'ETHUSD'");
-            assertEquals("crypto", response.results().get("ETHUSD").kind(), "ETHUSD field 'kind' must be crypto");
-
-            assertTrue(response.results().containsKey("BVSP"), "Asset response must contain key 'BVSP'");
-            assertEquals("index", response.results().get("BVSP").kind(), "BVSP field 'kind' must be index");
-
-            assertTrue(response.results().containsKey("EURBRL"), "Asset response must contain key 'EURBRL'");
-            assertEquals("currency", response.results().get("EURBRL").kind(), "EURBRL field 'kind' must be currency");
-
-            assertTrue(response.results().containsKey("BDIV11"), "Asset response must contain key 'BDIV11'");
-            assertEquals("fip", response.results().get("BDIV11").kind(), "BDIV11 field 'kind' must be fip");
-
-            assertTrue(response.results().containsKey("TSMC34"), "Asset response must contain key 'TSMC34'");
-            assertEquals("bdr", response.results().get("TSMC34").kind(), "TSMC34 field 'kind' must be bdr");
+            assertNotNull(response);
+            assertAll(
+                    () -> assertEquals("crypto", response.results().get("ETHUSD").kind()),
+                    () -> assertEquals("index", response.results().get("BVSP").kind()),
+                    () -> assertEquals("currency", response.results().get("EURBRL").kind()),
+                    () -> assertEquals("fip", response.results().get("BDIV11").kind()),
+                    () -> assertEquals("bdr", response.results().get("TSMC34").kind())
+            );
         }
     }
 
@@ -220,19 +211,20 @@ class HGBrasilClientIT {
         void shouldFetchIbovespa() {
             IbovespaResponse response = ibovespaOperations.getIbovespa();
 
-            assertNotNull(response, "IBOVESPA response must not be null");
-            assertTrue(response.validKey(), "API key must be valid");
+            assertNotNull(response);
+            assertFalse(response.results().isEmpty());
 
-            assertNotNull(response.results(), "Field 'results' must not be null");
-            assertFalse(response.results().isEmpty(), "Result list should not be empty");
+            IbovespaResult ibovespaResult = response.results().get(0);
 
-            IbovespaResult ibovespaResult = response.results().getFirst();
-            assertNotNull(ibovespaResult.data(), "Field 'data' must not be null");
-            assertFalse(ibovespaResult.data().isEmpty(), "Data list should not be empty");
+            assertFalse(ibovespaResult.data().isEmpty());
 
-            IbovespaIntradayPoint intradayPoint = ibovespaResult.data().getFirst();
-            assertNotNull(intradayPoint.date(), "Field 'date' must not be null");
-            assertEquals(LocalDateTime.class, intradayPoint.date().getClass(), "The 'date' must be converted to LocalDateTime type");
+            IbovespaIntradayPoint intradayPoint = ibovespaResult.data().get(0);
+
+            assertAll(
+                    () -> assertTrue(response.validKey()),
+                    () -> assertNotNull(intradayPoint.date()),
+                    () -> assertEquals(LocalDateTime.class, intradayPoint.date().getClass())
+            );
 
             LOGGER.debug("Ibovespa response:\n{}\n", response);
         }
@@ -246,20 +238,17 @@ class HGBrasilClientIT {
         void shouldFetchDividend() {
             DividendResponse response = dividendOperations.getByTicker("B3:PETR4");
 
-            assertNotNull(response, "Dividend response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Dividend response should not contain business errors");
+            assertNotNull(response);
 
-            assertTrue(response.findFirstResult().isPresent(), "Dividend result list should contain at least one asset");
-            DividendResult dividendResult = response.findFirstResult().get();
+            DividendResult dividendResult = response.findFirstResult().orElseThrow();
+            DividendSeries series = dividendResult.findFirstSeries().orElseThrow();
 
-            assertFalse(dividendResult.getSafeSeries().isEmpty(), "Dividend series list should not be empty");
-
-            assertTrue(dividendResult.findFirstSeries().isPresent(), "Should find the most recent series");
-            DividendSeries series = dividendResult.findFirstSeries().get();
-
-            assertNotNull(series.comDate(), "Field 'comDate' must not be null");
-            assertEquals(LocalDate.class, series.comDate().getClass(), "The 'comDate' must be converted to LocalDate type");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(dividendResult.getSafeSeries().isEmpty()),
+                    () -> assertNotNull(series.comDate())
+            );
 
             LOGGER.debug("Dividend response:\n{}\n", response);
         }
@@ -269,18 +258,19 @@ class HGBrasilClientIT {
         void shouldReturnError_whenTickerIsInvalid() {
             DividendResponse response = dividendOperations.getByTicker("A3:FALSE88");
 
-            assertNotNull(response, "Dividend response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertTrue(response.hasErrors(), "Dividend response should contain errors");
+            assertNotNull(response);
+            assertFalse(response.getSafeErrors().isEmpty());
 
-            assertFalse(response.getSafeErrors().isEmpty(), "Should found the mapped error in response");
-            ApiError error = response.getSafeErrors().getFirst();
+            ApiError error = response.getSafeErrors().get(0);
 
-            assertNotNull(error.message(), "Error message must not be null");
-            assertFalse(error.message().isBlank(), "Error message should contain text");
-
-            assertTrue(response.getSafeResults().isEmpty(), "getSafeResults() should return an empty list");
-            assertTrue(response.findFirstResult().isEmpty(), "findFirstResult() should return empty Optional");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertTrue(response.hasErrors()),
+                    () -> assertNotNull(error.message()),
+                    () -> assertFalse(error.message().isBlank()),
+                    () -> assertTrue(response.getSafeResults().isEmpty()),
+                    () -> assertTrue(response.findFirstResult().isEmpty())
+            );
 
             LOGGER.debug("Invalid ticker - Dividend response:\n{}\n", response);
         }
@@ -293,19 +283,21 @@ class HGBrasilClientIT {
 
             DividendResponse response = dividendOperations.getHistorical("B3:PETR4", startDate, endDate);
 
-            assertNotNull(response, "Historical dividend response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Dividend response should not contain business errors");
+            assertNotNull(response);
 
-            assertTrue(response.findFirstResult().isPresent(), "Dividend result list should contain PETR4 data");
-            DividendResult dividendResult = response.findFirstResult().get();
+            DividendResult dividendResult = response.findFirstResult().orElseThrow();
 
-            assertFalse(dividendResult.getSafeSeries().isEmpty(), "Dividend series list should not be empty");
+            assertFalse(dividendResult.getSafeSeries().isEmpty());
 
-            LocalDate firstComDate = dividendResult.getSafeSeries().getFirst().comDate();
-            assertTrue(
-                    !firstComDate.isBefore(startDate) && !firstComDate.isAfter(endDate),
-                    "The dividend com_date must between the requested date range (inclusive)"
+            LocalDate firstComDate = dividendResult.getSafeSeries().get(0).comDate();
+
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertTrue(
+                            !firstComDate.isBefore(startDate) && !firstComDate.isAfter(endDate),
+                            "The dividend com_date must be between the requested date range (inclusive)"
+                    )
             );
 
             LOGGER.debug("Historical with date range - Dividend response:\n{}\n", response);
@@ -314,23 +306,20 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch dividend historical using 'date' query parameter")
         void shouldFetchHistoricalDividend_withDate() {
-            LocalDate date = LocalDate.of(2025, 1, 1);
+            DividendResponse response = dividendOperations.getHistorical("B3:PETR4", LocalDate.of(2025, 1, 1));
 
-            DividendResponse response = dividendOperations.getHistorical("B3:PETR4", date);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical dividend response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Dividend response should not contain business errors");
-
-            assertTrue(response.findFirstResult().isPresent(), "Dividend result list should contain PETR4 data");
-            DividendResult dividendResult = response.findFirstResult().get();
-
-            assertFalse(dividendResult.getSafeSeries().isEmpty(), "Dividend series list should not be empty");
-
+            DividendResult dividendResult = response.findFirstResult().orElseThrow();
             boolean has2025Event = dividendResult.getSafeSeries().stream()
-                            .anyMatch(series -> series.comDate() != null && series.comDate().getYear() == 2025);
+                    .anyMatch(series -> series.comDate() != null && series.comDate().getYear() == 2025);
 
-            assertTrue(has2025Event, "The response should contain dividend events for the year 2025");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(dividendResult.getSafeSeries().isEmpty()),
+                    () -> assertTrue(has2025Event)
+            );
 
             LOGGER.debug("Historical with date - Dividend response:\n{}\n", response);
         }
@@ -338,16 +327,17 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch dividend historical using 'days_ago' query parameter")
         void shouldFetchHistoricalDividend_withDaysAgo() {
-            int daysAgo = 365;
+            DividendResponse response = dividendOperations.getHistorical("B3:PETR4", 365);
 
-            DividendResponse response = dividendOperations.getHistorical("B3:PETR4", daysAgo);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical dividend response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "The dividend response should not contain business errors");
+            DividendResult dividendResult = response.findFirstResult().orElseThrow();
 
-            assertTrue(response.findFirstResult().isPresent(), "Dividend result list should contain PETR4 data");
-            assertFalse(response.findFirstResult().get().getSafeSeries().isEmpty(), "Dividend series list should not be empty");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(dividendResult.getSafeSeries().isEmpty())
+            );
 
             LOGGER.debug("Historical with days ago - Dividend response:\n{}\n", response);
         }
@@ -361,20 +351,18 @@ class HGBrasilClientIT {
         void shouldFetchSplit() {
             SplitResponse response = splitOperations.getByTicker("B3:TIMS3");
 
-            assertNotNull(response, "Split response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Split response should not contain business errors");
+            assertNotNull(response);
 
-            assertTrue(response.findFirstResult().isPresent(), "Split result list should contain at least one asset");
-            SplitResult splitResult = response.findFirstResult().get();
+            SplitResult splitResult = response.findFirstResult().orElseThrow();
+            SplitEvent events = splitResult.findFirstEvent().orElseThrow();
 
-            assertFalse(splitResult.getSafeEvents().isEmpty(), "Split event list should not be empty");
-
-            assertTrue(splitResult.findFirstEvent().isPresent(), "Should find the most recent events");
-            SplitEvent events = splitResult.findFirstEvent().get();
-
-            assertNotNull(events.comDate(), "Field 'comDate' must not be null");
-            assertEquals(LocalDate.class, events.comDate().getClass(), "The 'comDate' must be converted to LocalDate type");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(splitResult.getSafeEvents().isEmpty()),
+                    () -> assertNotNull(events.comDate()),
+                    () -> assertEquals(LocalDate.class, events.comDate().getClass())
+            );
 
             LOGGER.debug("Split response:\n{}\n", response);
         }
@@ -384,18 +372,18 @@ class HGBrasilClientIT {
         void shouldReturnError_whenTickerIsInvalid() {
             SplitResponse response = splitOperations.getByTicker("A3:FALSE88");
 
-            assertNotNull(response, "Split response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertTrue(response.hasErrors(), "Split response should contain errors");
+            assertNotNull(response);
+            assertFalse(response.getSafeErrors().isEmpty());
 
-            assertFalse(response.getSafeErrors().isEmpty(), "Should found the mapped error in response");
-            ApiError error = response.getSafeErrors().getFirst();
+            ApiError error = response.getSafeErrors().get(0);
 
-            assertNotNull(error.message(), "Error message must not be null");
-            assertFalse(error.message().isBlank(), "Error message should contain text");
-
-            assertTrue(response.getSafeResults().isEmpty(), "getSafeResults() should return an empty list");
-            assertTrue(response.findFirstResult().isEmpty(), "findFirstResult() should return empty Optional");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertTrue(response.hasErrors()),
+                    () -> assertNotNull(error.message()),
+                    () -> assertFalse(error.message().isBlank()),
+                    () -> assertTrue(response.getSafeResults().isEmpty())
+            );
 
             LOGGER.debug("Invalid ticker - Split response:\n{}\n", response);
         }
@@ -408,19 +396,21 @@ class HGBrasilClientIT {
 
             SplitResponse response = splitOperations.getHistorical("B3:TIMS3", startDate, endDate);
 
-            assertNotNull(response, "Historical split response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Split response should not contain business errors");
+            assertNotNull(response);
 
-            assertTrue(response.findFirstResult().isPresent(), "Split result list should contain TIMS3 data");
-            SplitResult splitResult = response.findFirstResult().get();
+            SplitResult splitResult = response.findFirstResult().orElseThrow();
 
-            assertFalse(splitResult.getSafeEvents().isEmpty(), "Split event list should not be empty");
+            assertFalse(splitResult.getSafeEvents().isEmpty());
 
-            LocalDate firstComDate = splitResult.getSafeEvents().getFirst().comDate();
-            assertTrue(
-                    !firstComDate.isBefore(startDate) && !firstComDate.isAfter(endDate),
-                    "The split com_date must between the requested date range (inclusive)"
+            LocalDate firstComDate = splitResult.getSafeEvents().get(0).comDate();
+
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertTrue(
+                            !firstComDate.isBefore(startDate) && !firstComDate.isAfter(endDate),
+                            "The split com_date must be between the requested date range (inclusive)"
+                    )
             );
 
             LOGGER.debug("Historical with date range - Split response:\n{}\n", response);
@@ -429,23 +419,21 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch split historical using 'date' query parameter")
         void shouldFetchHistoricalSplit_withDate() {
-            LocalDate date = LocalDate.of(2025, 1, 1);
+            SplitResponse response = splitOperations.getHistorical("B3:TIMS3", LocalDate.of(2025, 1, 1));
 
-            SplitResponse response = splitOperations.getHistorical("B3:TIMS3", date);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical split response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Split response should not contain business errors");
-
-            assertTrue(response.findFirstResult().isPresent(), "Split result list should contain B3:TIMS3 data");
-            SplitResult splitResult = response.findFirstResult().get();
-
-            assertFalse(splitResult.getSafeEvents().isEmpty(), "Split event list should not be empty");
+            SplitResult splitResult = response.findFirstResult().orElseThrow();
 
             boolean has2025Event = splitResult.getSafeEvents().stream()
                     .anyMatch(event -> event.comDate() != null && event.comDate().getYear() == 2025);
 
-            assertTrue(has2025Event, "The split response should contain split events for the year 2025");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(splitResult.getSafeEvents().isEmpty()),
+                    () -> assertTrue(has2025Event)
+            );
 
             LOGGER.debug("Historical with date - Split response:\n{}\n", response);
         }
@@ -453,16 +441,17 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch split historical using 'days_ago' query parameter")
         void shouldFetchHistoricalSplit_withDaysAgo() {
-            int daysAgo = 365;
+            SplitResponse response = splitOperations.getHistorical("B3:TIMS3", 365);
 
-            SplitResponse response = splitOperations.getHistorical("B3:TIMS3", daysAgo);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical split response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "The split response should not contain business errors");
+            SplitResult splitResult = response.findFirstResult().orElseThrow();
 
-            assertTrue(response.findFirstResult().isPresent(), "Split result list should contain B3:TIMS3 data");
-            assertFalse(response.findFirstResult().get().getSafeEvents().isEmpty(), "Split event list should not be empty");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertFalse(splitResult.getSafeEvents().isEmpty())
+            );
 
             LOGGER.debug("Historical with days ago - Split response:\n{}\n", response);
         }
@@ -476,20 +465,18 @@ class HGBrasilClientIT {
         void shouldFetchIndicator() {
             IndicatorResponse response = indicatorOperations.getByTicker("IBGE:IPCA");
 
-            assertNotNull(response, "Indicator response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Indicator response should not contain business errors");
-            assertTrue(response.findFirstResult().isPresent(), "Indicator result list should contain at least one indicator");
+            assertNotNull(response);
 
-            IndicatorResult indicatorResult = response.findFirstResult().get();
+            IndicatorResult indicatorResult = response.findFirstResult().orElseThrow();
+            IndicatorSeries serie = indicatorResult.findFirstSeries().orElseThrow();
 
-            assertEquals("IBGE:IPCA", indicatorResult.ticker(), "The tickers must match");
-            assertFalse(indicatorResult.getSafeSeries().isEmpty(), "Indicator event list should not be empty");
-            assertTrue(indicatorResult.findFirstSeries().isPresent(), "Should find the most recent series");
-
-            IndicatorSeries series = indicatorResult.findFirstSeries().get();
-
-            assertNotNull(series.period(), "Field 'period' must not be null");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertEquals("IBGE:IPCA", indicatorResult.ticker()),
+                    () -> assertFalse(indicatorResult.getSafeSeries().isEmpty()),
+                    () -> assertNotNull(serie.period())
+            );
 
             LOGGER.debug("Indicator response:\n{}\n", response);
         }
@@ -499,17 +486,18 @@ class HGBrasilClientIT {
         void shouldReturnError_whenTickerIsInvalid() {
             IndicatorResponse response = indicatorOperations.getByTicker("A3:FALSE88");
 
-            assertNotNull(response, "Indicator response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertTrue(response.hasErrors(), "Indicator response should contain errors");
-            assertFalse(response.getSafeErrors().isEmpty(), "Should found the mapped error in response");
-            assertTrue(response.getSafeResults().isEmpty(), "getSafeResults() should return an empty list");
-            assertTrue(response.findFirstResult().isEmpty(), "findFirstResult() should return empty Optional");
+            assertNotNull(response);
+            assertFalse(response.getSafeErrors().isEmpty());
 
-            ApiError error = response.getSafeErrors().getFirst();
+            ApiError error = response.getSafeErrors().get(0);
 
-            assertNotNull(error.message(), "Error message must not be null");
-            assertFalse(error.message().isBlank(), "Error message should contain text");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertTrue(response.hasErrors()),
+                    () -> assertNotNull(error.message()),
+                    () -> assertFalse(error.message().isBlank()),
+                    () -> assertTrue(response.getSafeResults().isEmpty())
+            );
 
             LOGGER.debug("Invalid ticker - Indicator response:\n{}\n", response);
         }
@@ -522,15 +510,16 @@ class HGBrasilClientIT {
 
             IndicatorResponse response = indicatorOperations.getHistorical("IBGE:IPCA", startDate, endDate);
 
-            assertNotNull(response, "Historical indicator response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Indicator response should not contain business errors");
-            assertTrue(response.findFirstResult().isPresent(), "Indicator result list should contain TIMS3 data");
+            assertNotNull(response);
 
-            IndicatorResult indicatorResult = response.findFirstResult().get();
+            IndicatorResult indicatorResult = response.findFirstResult().orElseThrow();
 
-            assertEquals(IndicatorPeriodicity.MONTHLY, indicatorResult.periodicity(), "Periodicity type must match");
-            assertFalse(indicatorResult.getSafeSeries().isEmpty(), "Indicator series list should not be empty");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertEquals(IndicatorPeriodicity.MONTHLY, indicatorResult.periodicity()),
+                    () -> assertFalse(indicatorResult.getSafeSeries().isEmpty())
+            );
 
             LOGGER.debug("Historical with date range - Indicator response:\n{}\n", response);
         }
@@ -538,19 +527,18 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch indicator historical using 'date' query parameter")
         void shouldFetchHistoricalIndicator_withDate() {
-            LocalDate date = LocalDate.of(2025, 1, 1);
+            IndicatorResponse response = indicatorOperations.getHistorical("BCB:CDI", LocalDate.of(2025, 1, 1));
 
-            IndicatorResponse response = indicatorOperations.getHistorical("BCB:CDI", date);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical indicator response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Indicator response should not contain business errors");
-            assertTrue(response.findFirstResult().isPresent(), "Indicator result list should contain BCB:CDI data");
+            IndicatorResult indicatorResult = response.findFirstResult().orElseThrow();
 
-            IndicatorResult indicatorResult = response.findFirstResult().get();
-
-            assertEquals(IndicatorPeriodicity.DAILY, indicatorResult.periodicity(), "Periodicity type must match");
-            assertFalse(indicatorResult.getSafeSeries().isEmpty(), "Indicator series list should not be empty");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertEquals(IndicatorPeriodicity.DAILY, indicatorResult.periodicity()),
+                    () -> assertFalse(indicatorResult.getSafeSeries().isEmpty())
+            );
 
             LOGGER.debug("Historical with date - Indicator response:\n{}\n", response);
         }
@@ -558,19 +546,18 @@ class HGBrasilClientIT {
         @Test
         @DisplayName("Should successfully fetch indicator historical using 'days_ago' query parameter")
         void shouldFetchHistoricalIndicator_withDaysAgo() {
-            int daysAgo = 365;
+            IndicatorResponse response = indicatorOperations.getHistorical("BCB:SELIC", 365);
 
-            IndicatorResponse response = indicatorOperations.getHistorical("BCB:SELIC", daysAgo);
+            assertNotNull(response);
 
-            assertNotNull(response, "Historical indicator response must not be null");
-            assertEquals("valid", response.metadata().keyStatus(), "API key must be valid");
-            assertFalse(response.hasErrors(), "Indicator response should not contain business errors");
-            assertTrue(response.findFirstResult().isPresent(), "Indicator result list should contain BCB:SELIC data");
+            IndicatorResult indicatorResult = response.findFirstResult().orElseThrow();
 
-            IndicatorResult indicatorResult = response.findFirstResult().get();
-
-            assertEquals(IndicatorPeriodicity.DAILY, indicatorResult.periodicity(), "Periodicity type must match");
-            assertFalse(indicatorResult.getSafeSeries().isEmpty(), "Indicator series list should not be empty");
+            assertAll(
+                    () -> assertEquals("valid", response.metadata().keyStatus()),
+                    () -> assertFalse(response.hasErrors()),
+                    () -> assertEquals(IndicatorPeriodicity.DAILY, indicatorResult.periodicity()),
+                    () -> assertFalse(indicatorResult.getSafeSeries().isEmpty())
+            );
 
             LOGGER.debug("Historical with days ago - Indicator response:\n{}\n", response);
         }
